tests/warn/parsing-unbalance-fence.jo
def test =
  println (1 + 3 * 5

def bar = 7 + 9  // error
